Updates config text with degree

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: James Dewes
 description: >- 
-  Studying for a BSc in Computing & IT with the OU since 2015 and Working in digital marketing since 2008.
+  BSc(Hons) Computing and IT (Software) of The Open University, Working in digital marketing since 2008.
   Tech enthusiast & tinkerer.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jamesdewes.com"
