--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "description": "My personal site built with Jekyll",
   "main": "gulpfile.js",
   "devDependencies": {
-    "autoprefixer": "9.*",
-    "browser-sync": "^2.26.14",
-    "bufferutil": "^4.0.3",
-    "cssnano": "^4.1.10",
+    "autoprefixer": "^9.8.8",
+    "browser-sync": "^2.27.5",
+    "bufferutil": "^4.0.4",
+    "cssnano": "^4.1.11",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-open": "^3.0.1",
-    "gulp-postcss": "^9.0.0",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-run": "^1.7.1",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^4.1.1",
     "gulp-uglify-es": "^2.0.0",
     "gulp-util": "^3.0.8",
     "imagemin-pngquant": "^9.0.2",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
-    "postcss": "^8.2.8",
-    "utf-8-validate": "^5.0.4"
+    "postcss": "^8.3.9",
+    "utf-8-validate": "^5.0.6"
   },
   "browsers": "last 2 versions",
   "scripts": {
